--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 	"dependencies": {
 		"@k4ung/svelte-otp": "^0.0.9",
 		"@loglib/tracker": "^0.8.0",
+		"@vercel/analytics": "^1.5.0",
 		"svelte-icons": "^2.1.0"
 	}
 }
